--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-.mp4
-.pt
-.pth
-.weights
-.png
-.jpg
-.JPEG
-.bag
+*.mp4
+*.pt
+*.pth
+*.weights
+*.png
+*.jpg
+*.JPEG
+*.bag
 result/
-.txt
+
+*.pyc
